# D2R_Multi_rust

./: .gitignore  CHANGELOG.md  PRIVACY_POLICY.md  PRIVACY_POLICY_CN.md  README.md  README_CN.md  User_Guide.md  debug_key.key  index.html  package-lock.json  package.json  publish.ps1  raw_b64.key  sync-version.ps1  tailwind.config.js
.github/workflows/: release.yml
RELEASES/: v0.2.0.md  v0.2.1.md
doc/: AI_INSTRUCTIONS.md  CODING_STANDARDS.md  LAUNCH_LOGIC.md  TECHNICAL_SPEC.md  verified_processes.md
doc/archive/: CODE_REVIEW_V1.md  DEVELOPER_HANDOVER_V2.md  FRONTEND_INTERACTION_V1.md
doc/backup/: PLAN_A_USER_CN.md  blueprint.md
keys/: SK  clean.key  signer  signer.pub  signer_fixed  signer_lf  signer_reconstructed.key
src/: App.css  App.tsx  i18n.ts  index.css  main.tsx  metadata.ts
src-tauri/: Cargo.toml  admin.manifest  build.err  build.rs  build_err.txt  build_err_2.txt  build_err_3.txt  build_err_3_utf8.txt  build_error.txt  build_errors.txt  build_errors_2.txt  build_log.txt  cargo_check_arch.txt  cargo_check_arch_utf8.txt  cargo_check_err.txt  cargo_check_err_utf8.txt  cargo_check_errors.txt  cargo_check_errors_2.txt  cargo_check_errors_2_utf8.txt  cargo_check_errors_3.txt  cargo_check_errors_3_utf8.txt  cargo_check_errors_4.txt  cargo_check_errors_4_utf8.txt  cargo_check_errors_5.txt  cargo_check_errors_5_utf8.txt  cargo_check_errors_6.txt  cargo_check_errors_6_utf8.txt  cargo_check_errors_7.txt  cargo_check_errors_7_utf8.txt  cargo_check_errors_utf8.txt  check_errors.txt  check_results.txt  compilation_errors.txt  d2r-rust.exe.manifest  final_check.txt  final_check_utf8.txt  log.txt  manifest.rc  tauri.conf.json  v020.key
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: config.rs  game.rs  inspector.rs  maintenance.rs  mod.rs  os.rs
src-tauri/src/modules/: account.rs  config.rs  file_swap.rs  logger.rs  mirror.rs  mod.rs  process_killer.rs  win_admin.rs  win_user.rs
src-tauri/src/modules/os/: mod.rs  windows_impl.rs
src-tauri/src/modules/os/windows/: mod.rs  process.rs  user.rs  utils.rs
src-tauri/src/modules/win32_safe/: handle.rs  health.rs  inspector.rs  mod.rs  mutex.rs  mutex_new.rs.example  process.rs
src/components/dashboard/: DashboardHeader.tsx  LaunchActions.tsx  LogConsole.tsx  SortableAccountItem.tsx
src/components/modals/: AccountModal.tsx  DonateModal.tsx  GuideModal.tsx  MirrorModal.tsx  PermissionsModal.tsx  ProcessExplorer.tsx  SettingsModal.tsx  WhatsNewModal.tsx
src/components/ui/: Button.tsx  LanguageSelector.tsx  Modal.tsx  NotificationManager.tsx  Switch.tsx  TitleBar.tsx  Toast.tsx
src/components/views/: AccountManager.tsx  Dashboard.tsx  ManualTools.tsx
src/hooks/: useAccountStatus.ts  useLaunchSequence.ts
src/lib/: api.ts
src/locales/: en.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
src/store/: useBlockingNotification.ts  useLogs.ts  useNotification.ts
