[package]
name = "d2r-rust"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "d2r_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["tray-icon", "image", "updater"] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory", "Win32_Security_Credentials", "Win32_UI_WindowsAndMessaging", "Win32_System_WindowsProgramming", "Win32_NetworkManagement_NetManagement", "Win32_System_Registry"] }
anyhow = "1.0.100"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sysinfo = "0.37.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-single-instance = "2.4.0"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-updater = "2.10.0"

[profile.release]
panic = "abort"
codegen-units = 16
lto = true
strip = true
